--- a/client/src/components/table/style.css
+++ b/client/src/components/table/style.css
@@ -1,7 +1,3 @@
-#table {
-    margin-top: 20px;
-}
-
 #table .parameter,
 #table .options {
     margin: 10px 0;
